--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <meta name="source-map" content="external" />
     <title>Miguel Comonfort | Game Developer</title>
     
+  <link rel="preload" href="public/assets/miguelComonfortResumePortfolio.pdf" as="document" />
     <!-- Preload critical assets that are immediately visible -->
-    <link rel="preload" href="/assets/IMG_3641.jpeg" as="image" />
+    <link rel="preload" href="public/assets/IMG_3641.jpeg" as="image" />
+       <link rel="preload" href="public/assets/constructionCalcSS.png" as="image" />
+       <link rel="preload" href="public/assets/portfolioSS.png" as="image" />
+       <link rel="preload" href="public/assets/galadeerSS.jpg" as="image" />
+       <link rel="preload" href="public/assets/severenceSS.png" as="image" />
+       <link rel="preload" href="public/assets/solitaireSS.jpg" as="image" />
+      <link rel="preload" href="public/assets/lebronSS.png" as="image" />
   </head>
   <body>
     <div id="root"></div>
