--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <meta name="source-map" content="external" />
     <title>Miguel Comonfort | Game Developer</title>
     
-    <!-- Preload critical assets that are immediately visible -->
-    <link rel="preload" href="./assets/IMG_3641.jpeg" as="image" />
-    <link rel="preload" href="./assets/miguelComonfortResumePortfolio.pdf" as="document" />
-    <link rel="preload" href="./assets/constructionCalcSS.png" as="image" />
-    <link rel="preload" href="./assets/portfolioSS.png" as="image" />
-    <link rel="preload" href="./assets/galadeerSS.jpg" as="image" />
-    <link rel="preload" href="./assets/severenceSS.png" as="image" />
-    <link rel="preload" href="./assets/solitaireSS.jpg" as="image" />
-    <link rel="preload" href="./assets/lebronSS.png" as="image" />
+    <!-- Vite handles asset preloading automatically -->
   </head>
   <body>
     <div id="root"></div>
