--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="source-map" content="external" />
     <title>Miguel Comonfort | Game Developer</title>
@@ -10,6 +10,9 @@
   <!-- Removed manual preloads; Vite handles preloading for JS/CSS automatically -->
   </head>
   <body>
+    <div id="no-js-warning" style="font-family: system-ui, sans-serif; padding: 12px; margin: 8px; background:#1b1b1b; color:#f0f0f0; border:1px solid #333; border-radius:8px;">
+      If the app doesn’t load, try disabling security/lockdown browser extensions for this site and reload.
+    </div>
     <div id="root"></div>
   <script type="module" src="src/main.jsx"></script>
   </body>
